--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
 <title>Deeyem</title>
 
 <!-- Favicon and Touch Icons -->
-<link href="images/favicon.png" rel="shortcut icon" type="image/png">
-<link href="images/apple-touch-icon.png" rel="apple-touch-icon">
+<link href="images/logo61.png" rel="shortcut icon" type="image/png">
+<link href="images/logo61.png" rel="apple-touch-icon">
 <link href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
 <link href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
 <link href="images/apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144">
@@ -134,7 +134,7 @@
       </div>
     </div>
     <div class="header-nav">
-      <div class="header-nav-wrapper navbar-scrolltofixed bg-white">
+      <div class="header-nav-wrapper navbar-scrolltofixed bg-white" style="margin-top: -33px;">
         <div class="container">
           <nav id="menuzord" class="menuzord default menuzord-responsive">
             <ul class="menuzord-menu">
@@ -186,13 +186,13 @@
   <!-- Start main-content -->
   <div class="main-content">
     <!-- Section: inner-header -->
-    <section class="inner-header divider layer-overlay overlay-theme-colored-7" data-bg-img="images/bg/bg1.jpg">
+    <section class="inner-header divider layer-overlay overlay-theme-colored-7" data-bg-img="images/banner1.jpeg" style="height: 199px;">
       <div class="container pt-120 pb-60">
         <!-- Section Content -->
         <div class="section-content">
           <div class="row"> 
             <div class="col-md-6">
-              <h2 class="text-theme-colored2 font-36">Contact</h2>
+              <h2 class="text font-36" style="color: white;margin-top: -40px;">Contact</h2>
               <ol class="breadcrumb text-left mt-10 white">
           
               </ol>
@@ -245,8 +245,8 @@
               </div>
               <div class="form-group">
                 <input id="form_botcheck" name="form_botcheck" class="form-control" type="hidden" value="" />
-                <button type="submit" class="btn btn-flat btn-default bg-hover-theme-colored mr-5" data-loading-text="Please wait...">Send your message</button>
-                <button type="reset" class="btn btn-flat btn-theme-colored2 bg-hover-theme-colored">Reset</button>
+                <button type="submit" class="btn btn-flat btn-theme-colored2 bg-hover-theme-colored" data-loading-text="Please wait...">Send your message</button>
+                <button type="reset" class="btn btn-flat btn-default bg-hover-theme-colored mr-5">Cancel</button>
               </div>
             </form>
           </div>
@@ -310,9 +310,10 @@ RAMANAGARA DIST - 562 112 Karnataka, INDIA</p>
             <h4 class="widget-title line-bottom-theme-colored-2">Useful Links</h4>
             <ul class="angle-double-right list-border">
               <li><a href="about.html">About Company</a></li>
+                 <li><a href="certification.html">Certification</a></li>
               <li><a href="milestones.html">Milestones</a></li>
               <li><a href="infrastructure.html">Infrastructure</a></li>
-              <li><a href="future_plan.html">Future Plan</a></li>
+          
               <li><a href="contact.html">Contact Us</a></li>              
             </ul>
           </div>
