--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <title>Deeyem</title>
 
 <!-- Favicon and Touch Icons -->
-<link href="images/favicon.png" rel="shortcut icon" type="image/png">
-<link href="images/apple-touch-icon.png" rel="apple-touch-icon">
+<link href="images/logo61.png" rel="shortcut icon" type="image/png">
+<link href="images/logo61.png" rel="apple-touch-icon">
 <link href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
 <link href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
 <link href="images/apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144">
@@ -69,6 +69,7 @@
   </div>
   
   <!-- Header -->
+
   <header id="header" class="header">
     <div class="header-top bg-theme-colored2 sm-text-center">
       <div class="container">
@@ -136,8 +137,9 @@
         </div>
       </div>
     </div>
+      <div style="border: 0.5px solid #337ab7;"">
     <div class="header-nav">
-      <div class="header-nav-wrapper navbar-scrolltofixed bg-white">
+      <div class="header-nav-wrapper navbar-scrolltofixed bg-white"style="margin-top: -25px;">
         <div class="container">
           <nav id="menuzord" class="menuzord default menuzord-responsive">
             <ul class="menuzord-menu">
@@ -184,8 +186,14 @@
         </div>
       </div>
     </div>
+ </div>
+
+
+
+
+
   </header>
-  
+
   <!-- Start main-content -->
   <div class="main-content">
     <!-- Section: home -->
@@ -609,7 +617,7 @@
               <div class="feature-title">
               	<h4>INFRASTRUCTURE<br></h4>
                 <p>The Unit is situated in a well-developed industrial zone in Bangalore and equipped with</p>
-              	<a href="#" class="read-more font-roboto-slab text-theme-colored2">Read More</a>
+              	<a href="infrastructure.html" class="read-more font-roboto-slab text-theme-colored2">Read More</a>
               </div>
             </div>
           </div>
@@ -633,7 +641,7 @@
               <div class="feature-title">
               	<h4>QUALITY POLICY</h4>
                 <p>We at Deeyem CNC Machining Pvt. Ltd. Manufacturers of Precision Machined Components</p>
-              	<a href="quality_policy.html" class="read-more font-roboto-slab text-theme-colored2">Read More</a>
+              	<a href="about.html" class="read-more font-roboto-slab text-theme-colored2">Read More</a>
               </div>
             </div>
           </div>
@@ -733,9 +741,10 @@ RAMANAGARA DIST - 562 112 Karnataka, INDIA</p>
             <h4 class="widget-title line-bottom-theme-colored-2">Useful Links</h4>
             <ul class="angle-double-right list-border">
               <li><a href="about.html">About Company</a></li>
+                 <li><a href="certification.html">Certification</a></li>
               <li><a href="milestones.html">Milestones</a></li>
               <li><a href="infrastructure.html">Infrastructure</a></li>
-              <li><a href="future_plan.html">Future Plan</a></li>
+           
               <li><a href="contact.html">Contact Us</a></li>              
             </ul>
           </div>
