--- a/quality_policy.html
+++ b/quality_policy.html
@@ -14,8 +14,8 @@
 <title>Deeyem</title>
 
 <!-- Favicon and Touch Icons -->
-<link href="images/favicon.png" rel="shortcut icon" type="image/png">
-<link href="images/apple-touch-icon.png" rel="apple-touch-icon">
+<link href="images/logo61.png" rel="shortcut icon" type="image/png">
+<link href="images/logo61.png" rel="apple-touch-icon">
 <link href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
 <link href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
 <link href="images/apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144">
@@ -136,7 +136,7 @@
       </div>
     </div>
     <div class="header-nav">
-      <div class="header-nav-wrapper navbar-scrolltofixed bg-white">
+      <div class="header-nav-wrapper navbar-scrolltofixed bg-white" style="margin-top: -33px;">
         <div class="container">
           <nav id="menuzord" class="menuzord default menuzord-responsive">
             <ul class="menuzord-menu">
@@ -264,9 +264,10 @@ RAMANAGARA DIST - 562 112 Karnataka, INDIA</p>
             <h4 class="widget-title line-bottom-theme-colored-2">Useful Links</h4>
             <ul class="angle-double-right list-border">
               <li><a href="about.html">About Company</a></li>
+                 <li><a href="certification.html">Certification</a></li>
               <li><a href="milestones.html">Milestones</a></li>
               <li><a href="infrastructure.html">Infrastructure</a></li>
-              <li><a href="future_plan.html">Future Plan</a></li>
+           
               <li><a href="contact.html">Contact Us</a></li>              
             </ul>
           </div>
