--- a/milestones.html
+++ b/milestones.html
@@ -14,8 +14,8 @@
 <title>Deeyem</title>
 
 <!-- Favicon and Touch Icons -->
-<link href="images/favicon.png" rel="shortcut icon" type="image/png">
-<link href="images/apple-touch-icon.png" rel="apple-touch-icon">
+<link href="images/logo61.png" rel="shortcut icon" type="image/png">
+<link href="images/logo61.png" rel="apple-touch-icon">
 <link href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
 <link href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
 <link href="images/apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144">
@@ -142,7 +142,7 @@
       </div>
     </div>
     <div class="header-nav">
-      <div class="header-nav-wrapper navbar-scrolltofixed bg-white">
+      <div class="header-nav-wrapper navbar-scrolltofixed bg-white" style="margin-top: -33px;">
         <div class="container">
           <nav id="menuzord" class="menuzord default menuzord-responsive">
             <ul class="menuzord-menu">
@@ -199,13 +199,13 @@
     <div id="content">
 
    
-   <section class="inner-header divider layer-overlay overlay-theme-colored-7" data-bg-img="images/bg/bg1.jpg">
+   <section class="inner-header divider layer-overlay overlay-theme-colored-7" data-bg-img="images/banner1.jpeg" style="height: 199px;">
       <div class="container pt-120 pb-60">
         <!-- Section Content -->
         <div class="section-content">
           <div class="row"> 
             <div class="col-md-6">
-              <h2 class="text-theme-colored2 font-36">Milestones</h2>
+            <h2 class="text font-36" style="color: white;margin-top: -40px;">Milestones</h2>
               <ol class="breadcrumb text-left mt-10 white">
          
               </ol>
@@ -525,9 +525,10 @@ RAMANAGARA DIST - 562 112 Karnataka, INDIA</p>
             <h4 class="widget-title line-bottom-theme-colored-2">Useful Links</h4>
             <ul class="angle-double-right list-border">
               <li><a href="about.html">About Company</a></li>
+                 <li><a href="certification.html">Certification</a></li>
               <li><a href="milestones.html">Milestones</a></li>
               <li><a href="infrastructure.html">Infrastructure</a></li>
-              <li><a href="future_plan.html">Future Plan</a></li>
+          
               <li><a href="contact.html">Contact Us</a></li>              
             </ul>
           </div>
